Include node entity (crete endpoint)
